[tool.poetry]
name = "ev3-robonomics"
version = "0.1.0"
description = "A simple tool for transforming a LEGO EV3 based robot into an economic agent."
authors = ["PaTara43 <p040399@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
robonomics-interface = "^1.3.2"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
